--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "tsc && nodemon index.js",
+    "start": "node dist/index.js",
+    "compile": "tsc && node app.js",
+    "dev": "nodemon -e ts  --exec \"npm run compile\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest --coverage",
