--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/PVBalyuk/node-test#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.18.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
