--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/PVBalyuk/node-test#readme",
   "dependencies": {
+    "@types/sequelize": "^4.28.11",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.18.0"
