--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+//    "baseUrl": "./src",
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Projects */
@@ -97,5 +98,6 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+
 }
