--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "compile": "tsc && node app.js",
-    "dev": "nodemon -e ts  --exec \"npm run compile\"",
+    "compile": "tsc && node ./dist/index.js",
+    "dev": "nodemon ./src/index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest --coverage",
