--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start:ts": "tsc -w",
+    "start:js": "nodemon dist/index.js",
+    "start": "concurrently npm:start:*",
     "compile": "tsc && node ./dist/index.js",
     "dev": "nodemon ./src/index.ts",
     "lint": "eslint .",
@@ -27,6 +29,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/sequelize": "^4.28.11",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^7.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
